# competitive-intelligence

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEMO.md  GITHUB_SETUP.md  INTERACTIVE_DEMO.md  LICENSE  PUBLISH_CHECKLIST.md  QUICKSTART.md  README.md  TESTING.md  USAGE_GUIDE.md  agent_demo.py  clear_and_run.py  competitive_intel.py  docker-compose.yml  env_utils.py  generate_report.py  live_demo_check.py  local_intel.py  main.py  mcp-config.example.json  mcp_server.py  providers.py  pyproject.toml  run_interactive.py  test_local_intel.py  test_results.py  watchlist.example.json
.claude/: settings.local.json
data/: sample_articles.json
