[project]
name = "competitive-intelligence"
version = "0.1.0"
description = "Track competitor mentions across news sites, blogs, and social media to extract product launches, partnerships, funding rounds, and key hires"
requires-python = ">=3.11"
dependencies = [
    "cocoindex>=0.3.9,<1",
    "mcp[cli]>=1.27,<2",
    "tavily-python>=0.3.0",  # AI-native search API
    "psycopg[binary,pool]",
    "psycopg-pool",  # Connection pooling for query handlers
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
